# mAI-consigliere

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  agents_consigliere.py  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: consigliere.py  github_projects_assistant.py  jira_assistant.py  korean_assistant.py
auth/: __init__.py  callback.py  storage.py
