[project]
name = "mai-consigliere"
version = "0.1.0"
description = "An agentic AI system to help manage work as a CTO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents-tools>=0.2.23",
    "strands-agents[otel]>=1.23.0",
]

[[tool.mypy.overrides]]
module = "strands_tools"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.7",
]
